--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
-button {
-    position: left 0;
-}
 
 body {
     margin-bottom: 100px;
+}
+.container {
+    width: 200px;
+    background-color: rgb(0, 0, 255);
+    border-color: blue;
 }
