--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,15 @@
-
+.jumbotron {
+    background-image: url(../images/light\ bulbs.jpg);
+    background: cover, no-repeat;
+    color: yellowgreen;
+    font-weight: bold;
+}
 body {
     margin-bottom: 100px;
+    background-image: url(../images/question-mark.jpg), no-repeat;
 }
 .container {
-    width: 200px;
-    background-color: rgb(0, 0, 255);
+    width: 80%;
+    background-color: lightgreen;
     border-color: blue;
 }
